--- a/RutkoGolf/pom.xml
+++ b/RutkoGolf/pom.xml
@@ -223,6 +223,11 @@
 			<artifactId>gdata-media</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>0.2.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
